--- a/css/style.css
+++ b/css/style.css
@@ -305,6 +305,9 @@ h6,
 }
 
 @media (max-width: 991.98px) {
+    .step-box{
+        margin: 10px 20px;
+    }
     .hero-header {
         padding: 6rem 0 9rem 0;
     }
@@ -664,4 +667,29 @@ h6,
 .footer .copyright a:hover,
 .footer .footer-menu a:hover {
     color: var(--secondary);
+}
+
+.step-box{
+    margin: 0 50px;
+    padding: 20px 25px;
+    border: 4px solid var(--primary);
+    border-top-right-radius: 40px;
+    border-top-left-radius: 40px;
+    border-right: 10px solid var(--primary);
+    border-top: 2px solid var(--primary);
+    border-left: 1px solid var(--primary);
+    transition: all 0.2s ease-in;
+}
+.step-box:hover{
+    transform: translateY(-10px);
+    box-shadow: 0px 5px 30px 0px rgba(233,153,4,0.2);
+    border: 4px solid var(--secondary);
+    border-top-right-radius: 40px;
+    border-top-left-radius: 40px;
+    border-right: 10px solid var(--secondary);
+    border-top: 2px solid var(--secondary);
+    border-left: 1px solid var(--secondary);
+}
+.step-box h3,p{
+    text-align: center;
 }
